--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,20 @@
 plugins {
     id 'java'
+    id 'com.github.johnrengelman.shadow' version '8.1.1'
 }
 
 group = 'io.pinger.groups'
-version = '1.0-SNAPSHOT'
+version = '1.0.0'
 
 repositories {
     mavenCentral()
+    mavenLocal()
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
-}
-
-test {
-    useJUnitPlatform()
+    compileOnly 'org.spigotmc:spigot-api:1.21.1-R0.1-SNAPSHOT'
+    compileOnly 'org.jetbrains:annotations:24.0.1'
+    implementation 'com.zaxxer:HikariCP:4.0.3'
+    implementation 'com.jonahseguin:drink:1.0.5'
+    implementation 'com.tchristofferson:ConfigUpdater:2.0-SNAPSHOT'
 }
