--- a/build.gradle
+++ b/build.gradle
@@ -12,9 +12,18 @@ repositories {
 }
 
 dependencies {
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.1'
+    testImplementation 'com.google.guava:guava:33.3.1-jre'
+
     compileOnly 'org.spigotmc:spigot-api:1.21.1-R0.1-SNAPSHOT'
     compileOnly 'org.jetbrains:annotations:24.0.1'
+
     implementation 'com.zaxxer:HikariCP:4.0.3'
     implementation 'com.jonahseguin:drink:1.0.5'
     implementation 'com.tchristofferson:ConfigUpdater:2.0-SNAPSHOT'
+}
+
+test {
+    useJUnitPlatform()
 }
