--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ version = '1.0.0'
 repositories {
     mavenCentral()
     mavenLocal()
+    maven { url 'https://repo.alessiodp.com/releases/' }
 }
 
 dependencies {
@@ -22,6 +23,7 @@ dependencies {
     implementation 'com.zaxxer:HikariCP:4.0.3'
     implementation 'com.jonahseguin:drink:1.0.5'
     implementation 'com.tchristofferson:ConfigUpdater:2.0-SNAPSHOT'
+    implementation 'net.byteflux:libby-bukkit:1.3.1'
 }
 
 test {
