--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -10,3 +10,11 @@ group:
   prefix-already-set: "&cThis group already has this exact prefix!"
   prefix-invalid-length: "&cInvalid length for prefix &e%s&c!"
   priority-already-set: "&cThis group already has this exact priority!"
+  already-active: "&cThis player already has this group active!"
+  failed-to-assign: "&cFailed to assign group to specified player!"
+  assign-success: "&aSuccessfully added group &e%s &ato player &e%s&a for &b%s&a!"
+  assign-success-target: "&aYou have been added to group &e%s&a for &b%s&a!"
+  not-active: "&cThis user doesn't have this group assigned to them"
+  failed-to-remove: "&cFailed to remove group from specified player!"
+  remove-success: "&aSuccessfully removed group &e%s &afrom player &e%s&a!"
+  remove-success-target: "&aYou have been removed from group &e%s&a!"
